[package]
name = "grape"
version = "0.1.0"
edition = "2021"

authors = ["Martin Lédl"]
description = "A tool to search for text in files recursively."
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/martinledl/grape-rust/"
repository = "https://github.com/martinledl/grape-rust/"
keywords = ["cli", "search", "grep"]
categories = ["command-line-utilities"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.1", features = ["derive"] }
anyhow = "1.0"
colored = "2.1"
rust_search = "2.0.0"
indicatif = "0.17.8"
